# FFTSO3

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  PatchOpenMPApple.cmake  README.md  fdcl_Clebsch_Gordon_matrix.cpp  fdcl_Clebsch_Gordon_matrix.hpp  fdcl_FFTS2.cpp  fdcl_FFTS2.hpp  fdcl_FFTSO3.cpp  fdcl_FFTSO3.hpp  fdcl_FFTSO3_complex.cpp  fdcl_FFTSO3_complex.hpp  fdcl_FFTSO3_matrix.cpp  fdcl_FFTSO3_matrix.hpp  fdcl_FFTSO3_real.cpp  fdcl_FFTSO3_real.hpp  index.html  test_FFTSO3.cpp
doc/: Doxyfile  fdcl_FFTSO3.aux  fdcl_FFTSO3.bbl  fdcl_FFTSO3.blg  fdcl_FFTSO3.tex
doc/html/: annotated.html  classes.html  classfdcl_1_1_clebsch___gordon__complex-members.html  classfdcl_1_1_clebsch___gordon__complex.html  classfdcl_1_1_clebsch___gordon__real-members.html  classfdcl_1_1_clebsch___gordon__real.html  classfdcl_1_1_f_f_t_s2__complex-members.html  classfdcl_1_1_f_f_t_s2__complex.html  classfdcl_1_1_f_f_t_s2__matrix-members.html  classfdcl_1_1_f_f_t_s2__matrix.html  classfdcl_1_1_f_f_t_s2__real-members.html  classfdcl_1_1_f_f_t_s2__real.html  classfdcl_1_1_f_f_t_s_o3__complex-members.html  classfdcl_1_1_f_f_t_s_o3__complex.html  classfdcl_1_1_f_f_t_s_o3__matrix-members.html  classfdcl_1_1_f_f_t_s_o3__matrix.html  classfdcl_1_1_f_f_t_s_o3__real-members.html  classfdcl_1_1_f_f_t_s_o3__real.html  classfdcl_1_1omp__thread-members.html  classfdcl_1_1omp__thread.html  classfdcl_1_1tictoc-members.html  classfdcl_1_1tictoc.html  dir_d44c64559bbebec7f509842c48db8b23.html  fdcl___clebsch___gordon_8hpp_source.html  fdcl___f_f_t_s2_8hpp_source.html  fdcl___f_f_t_s2__matrix_8hpp_source.html  fdcl___f_f_t_s_o3_8hpp_source.html  fdcl___f_f_t_s_o3__matrix_8hpp_source.html  fdcl__omp__thread_8hpp_source.html  fdcl__tictoc_8hpp_source.html  files.html  functions.html  functions_func.html  functions_vars.html  hierarchy.html  index.html  menudata.js  misc__matrix__func_8h_source.html
doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  classes_0.js  classes_2.js  classes_3.js  functions_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js
example/: example0.cpp  example1.cpp  example2.cpp  example3.cpp  example3_ETOPO5.hpp  example3_SSM.hpp  example4.cpp
include/: fdcl_Clebsch_Gordon.hpp  fdcl_Clebsch_Gordon_matrix.hpp  fdcl_FFTS2.hpp  fdcl_FFTS2_matrix.hpp  fdcl_FFTSO3.hpp  fdcl_FFTSO3_complex.hpp  fdcl_FFTSO3_matrix.hpp  fdcl_FFTSO3_real.hpp  fdcl_omp_thread.hpp  fdcl_tictoc.hpp  misc_matrix_func.h
scratch/: Makefile  cg_coefficients.m  cg_indices.m  cg_matrix.m  fdcl_wignerD.m  fdcl_wigner_d.m  misc_matrix_func.cpp  misc_matrix_func.h  test_CB_matrix  test_CB_matrix.cpp  test_Phi_sum.m  test_exp_sum.m  test_openmp.cpp  test_weight.m  tmp_Euler323.m  wignerD.m
scripts/: build_cmake.sh  build_eigen.sh  build_pybind11.sh
src/: example0.cpp  fdcl_Clebsch_Gordon.cpp  fdcl_Clebsch_Gordon_matrix.cpp  fdcl_FFTS2.cpp  fdcl_FFTS2_matrix.cpp  fdcl_FFTSO3.cpp  fdcl_FFTSO3_complex.cpp  fdcl_FFTSO3_matrix.cpp  fdcl_FFTSO3_real.cpp  fdcl_omp_thread.cpp  fdcl_tictoc.cpp  fftso3_bind.cpp  misc_matrix_func.cpp  test_FFTSO3.cpp
test/: test.cpp
tests/: test_bindings.py
